# mw_meeting_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5c4e7f8a9b12_add_platform_ownership_fields.py  a2f4d3b9c801_add_google_connection.py  b057596f7ee2_initial_schema.py  b7e21c5d4a90_add_calendar_auto_dispatch.py
backend/app/: __init__.py  config.py  db.py  deps.py  errors.py  events.py  firestore_client.py  main.py  models.py  schemas.py
backend/app/repositories/: __init__.py  calendar_dispatch.py  google.py  meetings.py  oauth_state.py
backend/app/routers/: calendar.py  events.py  google_auth.py  meetings.py  webhooks.py
backend/app/services/: calendar_auto_dispatcher.py  gcs_storage.py  google_calendar.py  poller.py  recall.py  storage.py  transcript.py  url_parser.py
backend/tests/: conftest.py  test_calendar.py  test_google_auth.py  test_meetings_api.py  test_poller.py  test_recall_client.py  test_transcript_parser.py  test_url_parser.py  test_webhooks.py
docs/: platform-api-contract.md  platform-integration.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: SpeakerLabel.test.tsx  SpeakerLabel.tsx  StatusBadge.tsx  TranscriptView.test.tsx  TranscriptView.tsx
frontend/src/hooks/: useSSE.test.tsx  useSSE.ts
frontend/src/lib/: meetingUrl.ts  statusCopy.ts
frontend/src/pages/: Calendar.tsx  ConversationDetail.tsx  (+2 more)
