[project]
name = "meeting-app-backend"
version = "0.1.0"
description = "Local-first meeting transcription backend"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite",
    "alembic",
    "fastapi[standard]",
    "httpx",
    "pydantic-settings",
    "python-dotenv",
    "sqlalchemy[asyncio]",
    "sse-starlette",
    "svix",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
