[project]
name = "meeting-app-backend"
version = "0.1.0"
description = "Local-first meeting transcription backend"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "firebase-admin>=7.4.0",
    "google-cloud-firestore>=2.27.0",
    "google-cloud-storage>=3.10.1",
    "httpx",
    "pydantic-settings",
    "python-dotenv",
    "sse-starlette",
    "svix",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
